--- a/OsmAnd/res/values/phrases.xml
+++ b/OsmAnd/res/values/phrases.xml
@@ -3849,5 +3849,7 @@
 	<string name="poi_hazard_flood">Flood hazard</string>
 	<string name="poi_hazard_minefield">Minefield</string>
 
+	<string name="poi_ruins">Ruins</string>
+
 
 </resources>
