Fix items height with big system text size

--- a/OsmAnd/res/layout-land/plan_route_info.xml
+++ b/OsmAnd/res/layout-land/plan_route_info.xml
@@ -96,10 +96,11 @@
                         android:layout_height="wrap_content">
 
                         <LinearLayout
-                            android:background="?attr/selectableItemBackground"
                             android:id="@+id/FromLayout"
-                            android:layout_width="fill_parent"
-                            android:layout_height="@dimen/list_item_height"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="?attr/selectableItemBackground"
+                            android:minHeight="@dimen/list_item_height"
                             android:orientation="horizontal">
 
                             <ImageView
@@ -155,10 +156,11 @@
                             android:focusable="false"/>
 
                         <LinearLayout
-                            android:background="?attr/selectableItemBackground"
                             android:id="@+id/ViaLayout"
                             android:layout_width="match_parent"
-                            android:layout_height="@dimen/list_item_height"
+                            android:layout_height="wrap_content"
+                            android:background="?attr/selectableItemBackground"
+                            android:minHeight="@dimen/list_item_height"
                             android:orientation="horizontal">
 
                             <ImageView
@@ -209,10 +211,11 @@
                             android:focusable="false"/>
 
                         <LinearLayout
-                            android:background="?attr/selectableItemBackground"
                             android:id="@+id/ToLayout"
                             android:layout_width="fill_parent"
-                            android:layout_height="@dimen/list_item_height"
+                            android:layout_height="wrap_content"
+                            android:background="?attr/selectableItemBackground"
+                            android:minHeight="@dimen/list_item_height"
                             android:orientation="horizontal">
 
                             <ImageView
@@ -281,7 +284,7 @@
 
                 <LinearLayout
                     android:id="@+id/RouteInfoControls"
-                    android:layout_width="fill_parent"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
 
