--- a/OsmAnd/res/layout/quick_action_add_favorite.xml
+++ b/OsmAnd/res/layout/quick_action_add_favorite.xml
@@ -7,9 +7,10 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="56dp"
-        android:orientation="horizontal"
-        android:background="?attr/bg_color">
+        android:layout_height="wrap_content"
+        android:background="?attr/bg_color"
+        android:minHeight="56dp"
+        android:orientation="horizontal">
 
         <TextView
             android:layout_width="match_parent"
