--- a/OsmAnd/res/layout/quick_action_switchable_action.xml
+++ b/OsmAnd/res/layout/quick_action_switchable_action.xml
@@ -8,8 +8,9 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="56dp"
+        android:layout_height="wrap_content"
         android:background="?attr/bg_color"
+        android:minHeight="56dp"
         android:orientation="horizontal">
 
         <TextView
