--- a/OsmAnd/res/values/colors.xml
+++ b/OsmAnd/res/values/colors.xml
@@ -200,6 +200,7 @@
 	<color name="gpx_time_span_color">#0080FF</color>
 
 	<color name="color_favorite">#eecc22</color>
+	<color name="color_favorite_gray">#b3b3b3</color>
 
 	<!-- Themed color list items -->
 	<!-- invalid -red, localindex not supported,  -->
