--- a/OsmAnd/res/layout/point_editor_fragment.xml
+++ b/OsmAnd/res/layout/point_editor_fragment.xml
@@ -114,6 +114,7 @@
                         </LinearLayout>
 
                         <LinearLayout
+                            android:id="@+id/category_row"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:baselineAligned="false"
