Remove unnecessary changes

--- a/OsmAnd-telegram/res/layout/item_with_three_text_lines.xml
+++ b/OsmAnd-telegram/res/layout/item_with_three_text_lines.xml
@@ -59,6 +59,7 @@
 			</LinearLayout>
 
 			<LinearLayout
+				android:id="@+id/description_container"
 				android:layout_width="match_parent"
 				android:layout_height="match_parent"
 				android:orientation="horizontal">
