--- a/OsmAnd-telegram/res/values/fonts.xml
+++ b/OsmAnd-telegram/res/values/fonts.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<string name="font_roboto_regular">fonts/Roboto-Regular.ttf</string>
-	<string name="font_roboto_medium">fonts/Roboto-Medium.ttf</string>
-	<string name="font_roboto_mono_bold">fonts/RobotoMono-Bold.ttf</string>
+	<string name="font_roboto_regular" translatable="false">fonts/Roboto-Regular.ttf</string>
+	<string name="font_roboto_medium" translatable="false">fonts/Roboto-Medium.ttf</string>
+	<string name="font_roboto_mono_bold" translatable="false">fonts/RobotoMono-Bold.ttf</string>
 </resources>
