Add BatteryOptimization dialog and improve ui in settings

--- a/OsmAnd-telegram/res/layout/item_with_rb_and_btn.xml
+++ b/OsmAnd-telegram/res/layout/item_with_rb_and_btn.xml
@@ -14,8 +14,8 @@
 
 	<ImageView
 		android:id="@+id/icon"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
+		android:layout_width="@dimen/list_item_icon_size"
+		android:layout_height="@dimen/list_item_icon_size"
 		android:layout_marginEnd="@dimen/content_padding_big"
 		android:layout_marginRight="@dimen/content_padding_big"
 		tools:src="@drawable/ic_action_live_now"
