--- a/OsmAnd/res/layout-land/map_hud_top.xml
+++ b/OsmAnd/res/layout-land/map_hud_top.xml
@@ -437,6 +437,21 @@
                             android:visibility="gone"
                             tools:text="New version of OsmAnd+ with 50% discount"/>
 
+                        <net.osmand.plus.widgets.TextViewEx
+                            android:id="@+id/widget_top_bar_text_btn"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="?attr/selectableItemBackground"
+                            android:ellipsize="end"
+                            android:maxLines="1"
+                            android:layout_marginTop="8dp"
+                            android:textColor="?attr/wikivoyage_active_color"
+                            android:textSize="@dimen/default_list_text_size"
+                            android:visibility="gone"
+                            osmand:typeface="@string/font_roboto_medium"
+                            tools:text="Some button"
+                            tools:visibility="visible"/>
+
                     </LinearLayout>
 
                     <ImageButton
