--- a/OsmAnd/res/values-ru/phrases.xml
+++ b/OsmAnd/res/values-ru/phrases.xml
@@ -3833,4 +3833,8 @@
 
 	<string name="poi_shoe_repair">Ремонт обуви</string>
 
+	<string name="poi_bulk_purchase">Массовая закупка</string>
+	<string name="poi_bulk_purchase_yes">Массовая закупка: есть</string>
+	<string name="poi_bulk_purchase_only">Только массовая закупка</string>
+
 </resources>
